[gd_scene load_steps=16 format=3 uid="uid://cqhtmx2xw45nj"]

[ext_resource type="Script" uid="uid://51ebp1lx6tip" path="res://nodes/render/ui-render-handler/ui-visuals/character-status/character_status_visual.gd" id="1_imou3"]
[ext_resource type="PackedScene" uid="uid://d0x3d2x1idfw8" path="res://nodes/render/ui-render-handler/ui-visuals/status-bar/status_bar.tscn" id="2_ra0fy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ra0fy"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_imou3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_imou3"]

[sub_resource type="Gradient" id="Gradient_ra0fy"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.187722, 0.117317, 0.142165, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_yfuhx"]
gradient = SubResource("Gradient_ra0fy")
width = 1

[sub_resource type="Gradient" id="Gradient_yfuhx"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 0, 0.709804, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_jyx32"]
gradient = SubResource("Gradient_yfuhx")

[sub_resource type="Gradient" id="Gradient_id1ne"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 1, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ml836"]
gradient = SubResource("Gradient_id1ne")

[sub_resource type="Animation" id="Animation_ra0fy"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterStatusVisualContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-500, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterStatusVisualContainer:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_yfuhx"]
resource_name = "switch_off"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterStatusVisualContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.0750296, 212, -500, -0.0333333, 138, 0.25, 0),
"times": PackedFloat32Array(0, 0.2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterStatusVisualContainer:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2)
}

[sub_resource type="Animation" id="Animation_imou3"]
resource_name = "switch_on"
length = 0.2
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterStatusVisualContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-500, -0.25, 0, 0, 476, -1, -0.1, 223, 0.1, 0),
"times": PackedFloat32Array(0, 0.2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterStatusVisualContainer:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0, 0.2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yfuhx"]
_data = {
&"RESET": SubResource("Animation_ra0fy"),
&"switch_off": SubResource("Animation_yfuhx"),
&"switch_on": SubResource("Animation_imou3")
}

[node name="CharacterStatusVisual" type="Control"]
custom_minimum_size = Vector2(380, 224)
layout_mode = 3
anchors_preset = 0
offset_right = 380.0
offset_bottom = 251.0
size_flags_vertical = 3
script = ExtResource("1_imou3")

[node name="CharacterStatusVisualContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -500.0
offset_right = -500.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ra0fy")

[node name="CharacterPortraitTextureRect" type="TextureRect" parent="CharacterStatusVisualContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture = SubResource("PlaceholderTexture2D_imou3")
expand_mode = 1
stretch_mode = 4

[node name="CharacterCalloutContainer" type="Control" parent="CharacterStatusVisualContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterStatusVisualContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 3

[node name="CharacterMetadataContainer" type="HBoxContainer" parent="CharacterStatusVisualContainer/VBoxContainer"]
layout_mode = 2

[node name="CharacterNameLabel" type="Label" parent="CharacterStatusVisualContainer/VBoxContainer/CharacterMetadataContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 25
text = "Character Name"
vertical_alignment = 2

[node name="VSeparator" type="VSeparator" parent="CharacterStatusVisualContainer/VBoxContainer/CharacterMetadataContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_imou3")

[node name="CharacterLevelLabel" type="Label" parent="CharacterStatusVisualContainer/VBoxContainer/CharacterMetadataContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "Lv. ???"
vertical_alignment = 2

[node name="CharacterHealthBar" parent="CharacterStatusVisualContainer/VBoxContainer" instance=ExtResource("2_ra0fy")]
unique_name_in_owner = true
layout_mode = 2
_label = "HPS"
_under = SubResource("GradientTexture1D_yfuhx")
_ghost_progress = SubResource("GradientTexture1D_jyx32")
_true_progress = SubResource("GradientTexture1D_ml836")

[node name="CharacterStatusEffectVisualContainer" type="HBoxContainer" parent="CharacterStatusVisualContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_yfuhx")
}
